все работает до 6 этапа